--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
+    "apexcharts": "^3.43.0",
     "query": "^0.2.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^5.3.0",
