--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-masterclass",
   "version": "0.1.0",
+  "homepage": "https://sheepdog13.github.io/react-masterclass/",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
@@ -18,6 +19,7 @@
     "@types/react-helmet": "^6.1.7",
     "@types/react-router-dom": "^5.3.3",
     "apexcharts": "^3.43.0",
+    "gh-pages": "^6.0.0",
     "query": "^0.2.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
@@ -32,6 +34,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
